--- a/css/componentModal.css
+++ b/css/componentModal.css
@@ -46,12 +46,14 @@ button:hover {
 
 .md-modal {
 	position: fixed;
+    overflow: scroll;
 	top: 50%;
 	left: 50%;
 	width: 50%;
 	max-width: 630px;
 	min-width: 320px;
 	height: auto;
+    max-height: 100%;
 	z-index: 2000;
 	visibility: hidden;
 	-webkit-backface-visibility: hidden;
