--- a/css/componentModal.css
+++ b/css/componentModal.css
@@ -46,7 +46,7 @@ button:hover {
 
 .md-modal {
 	position: fixed;
-    overflow: scroll;
+    /*overflow: scroll;*/
 	top: 50%;
 	left: 50%;
 	width: 50%;
