--- a/css/componentModal.css
+++ b/css/componentModal.css
@@ -6,6 +6,9 @@ Note that we need a container wrapping all content on the page for the
 perspective effects (not including the modals and the overlay).
 */
 
+
+
+
 button {
     border: none;
     padding: 0.6em 1.2em;
@@ -44,9 +47,14 @@ button:hover {
 	min-height: 100%;
 }
 
+/*hides scrollbar*/
+.md-modal::-webkit-scrollbar { width: 0 !important }
+
+
 .md-modal {
-	position: fixed;
-    /*overflow: scroll;*/
+    position: fixed;
+    overflow: scroll;
+    overflow-y: auto;
 	top: 50%;
 	left: 50%;
 	width: 50%;
@@ -56,7 +64,7 @@ button:hover {
     max-height: 100%;
 	z-index: 2000;
 	visibility: hidden;
-	-webkit-backface-visibility: hidden;
+	/*-webkit-backface-visibility: hidden;*/
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
 	-webkit-transform: translateX(-50%) translateY(-50%);
